HIR-288: Update params in Test Parameters if new param is added in query

--- a/squealy/squealy-web/src/Components/sass/_apiParams.scss
+++ b/squealy/squealy-web/src/Components/sass/_apiParams.scss
@@ -26,6 +26,18 @@
 
 .api-param-def-table {
   border: 1px solid $light_gray_color;
+
+  > tbody > tr {
+    > td > i.fa-trash-o {
+      opacity: 0.5;
+      cursor: pointer;
+    }
+
+    > td > i.fa-trash-o:hover {
+      opacity: 1;
+      color: $orange_color;
+    }
+  } 
 }
 
 .validation-table-wrapper {
