--- a/squealy/squealy-web/src/sass/_variables.scss
+++ b/squealy/squealy-web/src/sass/_variables.scss
@@ -4,6 +4,7 @@ $black_color : #000;
 $border_color: #ddd;
 $light_gray_color : #e6e6e6;
 $blue_color: #458fff;
+$orange_color: #f39448;
 $primary: #45a5ff;
 $dark_gray_color: #777
 
