--- a/squealy/squealy-web/src/Components/sass/_responseSection.scss
+++ b/squealy/squealy-web/src/Components/sass/_responseSection.scss
@@ -44,8 +44,8 @@
   .response-section-btn {
     background: $white_color;
     border-radius: 3px;
-    margin: 0 0.4em 0.2em 0;
-    padding: 0.4em 1.3em;
+    margin: 0 7px 4px 0;
+    padding: 5px 18px;
     outline: none;
   }
 }
