Refactored HidashModal component

--- a/squealy/squealy-web/src/Components/sass/_mainComponent.scss
+++ b/squealy/squealy-web/src/Components/sass/_mainComponent.scss
@@ -68,7 +68,7 @@ div.panel.panel-default {
 
 .tab-plus-icon {
   font-size: 1.6em !important;
-  color: $dark_gray_color;
+  color: $blue_color;
 }
 
 a:link#api-tabs-tab-add_tab {
