Fixed API parameter input box padding

--- a/squealy/squealy-web/src/Components/sass/_sidebar.scss
+++ b/squealy/squealy-web/src/Components/sass/_sidebar.scss
@@ -16,9 +16,11 @@
       color: $orange_color;
     }
     > input {
+      padding: 6px;
       width: 100%;
       border: 0;
     }
+    padding: 0;
   }
 
   > table > tbody > tr > td:last-child,
