HIR-321 Made the whole API tab clickable

--- a/squealy/squealy-web/src/Components/sass/_apiList.scss
+++ b/squealy/squealy-web/src/Components/sass/_apiList.scss
@@ -51,4 +51,24 @@
       color: $blue_color;
     }
   }
+
+  ul {
+
+    li{
+
+      a:link#api-tabs-tab-add_tab{
+        padding: 5.5px 10px;
+        border: none;
+        background: #fff;
+      }
+
+      a{
+        padding: 0;
+
+        .api-tab{
+          padding: 4px 6px 4px 10px;
+        }
+      }
+    }
+  }
 }
