HIR-324 1. Implemented dragable and resizable widget component. 2. Added unit tests for dashboard container.

--- a/squealy/squealy-web/src/sass/_main.scss
+++ b/squealy/squealy-web/src/sass/_main.scss
@@ -6,6 +6,7 @@
 @import './../Components/sass/responseSection';
 @import './../Components/sass/sidebar.scss';
 @import './../Components/sass/transformations.scss';
+@import './../Components/dashboard-view/sass/dashboard.scss';
 
 html, body, #root {
   height: 100vh;
