--- a/squealy/squealy-web/src/sass/_main.scss
+++ b/squealy/squealy-web/src/sass/_main.scss
@@ -7,6 +7,7 @@
 @import './../Components/sass/sidebar.scss';
 @import './../Components/sass/transformations.scss';
 @import './../Components/dashboard-view/sass/dashboard.scss';
+@import './../Components/dashboard-view/sass/widget.scss';
 
 html, body, #root {
   height: 100vh;
