--- a/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
+++ b/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
@@ -7,6 +7,29 @@
       position: relative;
       overflow: scroll;
 
+      .rnd-filter-wrapper {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+
+        img {
+          height: 20px;
+          width: 20px;
+          margin-left: 0;
+        }
+
+        .rnd-filter-label {
+          font-weight: bold;
+          margin-right: 5px;
+          margin-top: 5px;
+        }
+
+        .rnd-filter {
+          flex-grow: 1;
+        }
+      }
+
       h3 {
         background: white;
         text-align: center;
@@ -20,6 +43,7 @@
         height: 20px;
         width: 20px;
         margin-left: -25px;
+        cursor: pointer;
       }
 
       #chartChangeDropdown {
