--- a/squealy/templates/squealy-dashboard-base.html
+++ b/squealy/templates/squealy-dashboard-base.html
@@ -3,7 +3,7 @@
 
 <script type="text/javascript">
   google.charts.load('current', {packages: ['corechart']});
-  var filterValues = {'a': 5}
+  var filterValues = {}
 </script>
 {% block custom_scripts %}
 {% endblock %}
