--- a/squealy/squealy-web/src/Components/sass/_mainComponent.scss
+++ b/squealy/squealy-web/src/Components/sass/_mainComponent.scss
@@ -122,7 +122,7 @@ a:link#api-tabs-tab-add_tab {
   }
   .input-group {
     margin-top: 5px;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
   }
 }
 
@@ -133,4 +133,8 @@ a:link#api-tabs-tab-add_tab {
 
 a[role="menuitem"] > i.fa {
   padding-right: 12px;
+}
+
+.chart-api-modal {
+  width: 95%;
 }
