HIR-356 Adjusted the grid width

--- a/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
+++ b/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
@@ -5,7 +5,8 @@
       height: 90vh;
       margin-top: 2%;
       position: relative;
-      overflow: scroll;
+      overflow-y: scroll;
+      overflow-x: hidden;
 
       .rnd-filter-wrapper {
         height: 100%;
