HIR-356 Removed right bound to widget's rnd component

--- a/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
+++ b/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
@@ -5,8 +5,7 @@
       height: 90vh;
       margin-top: 2%;
       position: relative;
-      overflow-y: scroll;
-      overflow-x: hidden;
+      overflow: scroll;
 
       .rnd-filter-wrapper {
         height: 100%;
