--- a/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
+++ b/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
@@ -54,7 +54,17 @@
         margin-left: 8px;
         cursor: pointer;
       }
-
+      .filter-delete-icon {
+        height: 11px;
+        width: 11px;
+        margin-left: 8px;
+        cursor: pointer; 
+      }
+      .filter-edit-icon {
+        height: 15px;
+        width: 15px;
+        cursor: pointer;
+      }
       #chartChangeDropdown {
         width: 50%;
         margin-top: 5px;
