--- a/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
+++ b/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
@@ -14,12 +14,6 @@
         display: flex;
         align-items: center;
 
-        img {
-          height: 20px;
-          width: 20px;
-          margin-left: 0;
-        }
-
         .rnd-filter-label {
           font-weight: bold;
           margin-right: 5px;
@@ -55,14 +49,16 @@
         cursor: pointer;
       }
       .filter-delete-icon {
-        height: 11px;
-        width: 11px;
+        height: 16px;
+        width: 16px;
         margin-left: 8px;
         cursor: pointer; 
       }
       .filter-edit-icon {
-        height: 15px;
-        width: 15px;
+        height: 17px;
+        width: 17px;
+        margin-left: 4px;
+        margin-top: 3px; 
         cursor: pointer;
       }
       #chartChangeDropdown {
