--- a/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
+++ b/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
@@ -1,6 +1,32 @@
+
 #dashboardAreaWrapper {
   height: 100vh;
   overflow: hidden;
+  
+  .background-color-picker {
+    width: 200px;
+  }
+
+  .color-picker {
+    position: absolute;
+    right: 30px;
+    z-index: 200;
+  }
+  .color-picker-button {
+    height: 35px;
+    width: 35px;
+    background: #eee;
+    padding: 5px;
+    border-radius: 50%;
+    float: right;
+  }
+
+  .color-picker-content {
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+  }
+
   #dashboardArea {
       height: 90vh;
       margin-top: 2%;
