--- a/squealy/templates/widget.html
+++ b/squealy/templates/widget.html
@@ -1,25 +1,26 @@
 <div 
-	style="
-	position: absolute;
-	height: {{widget.height}};
-	width: {{widget.width}};
-	top: {{widget.top}};
-	left: {{widget.left}}"
+  id="widgetWrapper{{ forloop.counter }}"
+  class="widget-wrapper"
 >
-  <h3 
-    style="
-    background: white;
-    text-align: center;
-    margin: 0;
-    padding: 15px 0 15px 0;
-    display: inline-block;
-    width: 100%;"
+  <h3
+    class="widget-header"
+    id="widget_header{{ forloop.counter }}"
   >
     {{widget.title}}
   </h3>
   <div
     id='{{widget.title}}'
-    style="height: {{widget.height|add:'-50'}}; width: {{widget.width}}"
   >
   </div>
 </div>
+
+<script>
+  $("#widgetWrapper{{ forloop.counter }}").css(
+    {
+      top: {{widget.top}}*GRID_HEIGHT + 'px',
+      left: {{widget.left}}*GRID_WIDTH+ 'px',
+      width: {{widget.width}}*GRID_WIDTH + 'px',
+      height: {{widget.height}}*GRID_HEIGHT + 'px'
+    }
+  )
+</script>
