--- a/squealy/squealy-web/src/Components/sass/_responseSection.scss
+++ b/squealy/squealy-web/src/Components/sass/_responseSection.scss
@@ -41,11 +41,22 @@
 }
 
 .response-section {
-  .response-section-btn {
-    background: $white_color;
-    border-radius: 3px;
-    margin: 0 7px 4px 0;
-    padding: 5px 18px;
-    outline: none;
+
+  #gc_response_header {
+    display: flex;
+    align-content: center;
+
+    .response-section-btn {
+      background: $white_color;
+      border-radius: 3px;
+      margin: 0 7px 4px 0;
+      padding: 6px 18px;
+      outline: none;
+    }
+
+    #chart_select {
+      display: inline-block;
+      width: 200px;
+    }
   }
 }
