HIR-366 Changed the css of all the buttons

--- a/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
+++ b/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
@@ -7,6 +7,12 @@
     width: 200px;
   }
 
+  .dashboard-btn-wrapper {
+    display: inline-block;
+    width: 150px;
+    margin-right: 5px;
+  }
+
   .color-picker {
     position: absolute;
     right: 30px;
