HIR-376: Fixing widget positioning, and template redesign

--- a/squealy/squealy-web/src/sass/_main.scss
+++ b/squealy/squealy-web/src/sass/_main.scss
@@ -9,7 +9,7 @@
 @import './../Components/dashboard-view/sass/dashboard.scss';
 
 html, body, #root {
-  height: 100vh;
+  height: 100%;
 }
 
 body {
