--- a/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
+++ b/squealy/squealy-web/src/Components/dashboard-view/sass/dashboard.scss
@@ -1,7 +1,7 @@
 
 div.parent-div.container-fluid.dashboard-container {
   padding: 0px;
-  height:100%;
+  height:500vh;
 
   .dashboard-design {
     height: 100%;
@@ -54,7 +54,7 @@ div.parent-div.container-fluid.dashboard-container {
     .color-picker {
       position: absolute;
       right: 30px;
-      z-index: 200;
+      z-index: 1000;
     }
     .color-picker-button {
       margin-right: 19px;
@@ -76,10 +76,9 @@ div.parent-div.container-fluid.dashboard-container {
     }
 
     #dashboardArea {
-        height: inherit;
+        height: 100%;
         position: relative;
         overflow: auto;
-        overflow-x: auto;
 
         .rnd-filter-wrapper {
           height: 100%;
