--- a/squealy/templates/squealy-dashboard.html
+++ b/squealy/templates/squealy-dashboard.html
@@ -1,11 +1,12 @@
 <style>
-    body {
+    body, html {
       margin: 0;
+      padding: 0;
     }
 
     select {
-      min-width: 119px;
-      padding: 5px;
+      width: 100%;
+      padding: 7px;
       border: 1px solid #ddd;
       background: white;
       border-radius: 4px;
@@ -13,16 +14,16 @@
 
     input[type='text'] {
       padding: 7px;
-      min-width: 200px;
+      width: 100%;
       border-radius: 4px;
       border: 1px solid #ddd;
     }
 
     .filter-wrapper {
-      height: 100px;
+      /*height: 100px;*/
       width: 100%;
       padding: 0 15px;
-      display: flex;
+      display: inline-block;
       align-items: center;
       position: absolute;
     }
@@ -44,10 +45,9 @@
     }
 
     #dashboard_area {
-      min-height: 100%;
+      height: 100%;
       width: 100%;
-      overflow-y: auto;
-      padding: 15px;
+      position: relative;
     }
 
     .filter {
@@ -55,7 +55,9 @@
     }
 
     .widget-wrapper {
-      position: relative;
+      position: absolute;
+      padding: 15px;
+
     }
 
 </style>
@@ -146,7 +148,7 @@
             var wrapper = new google.visualization.ChartWrapper({
               chartType: widget.chartType,
               dataTable: response,
-              containerId: widget.title,
+              containerId: 'chart_'+index,
               options: {
                 height: chartHeight,
                 width: '100%'
