--- a/squealy/squealy-web/src/sass/_variables.scss
+++ b/squealy/squealy-web/src/sass/_variables.scss
@@ -6,5 +6,7 @@ $light_gray_color : #e6e6e6;
 $blue_color: #458fff;
 $orange_color: #f39448;
 $primary: #45a5ff;
-$dark_gray_color: #777
+$dark_gray_color: #777;
+$side_menu_heading_font_size: 18px;
+$text_color: #666;
 
