--- a/squealy/squealy-web/src/sass/_main.scss
+++ b/squealy/squealy-web/src/sass/_main.scss
@@ -12,7 +12,7 @@
 @import './../Components/dashboard-view/sass/dashboard.scss';
 
 html, body, #root {
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
