Connected with Backend APIs. Build UI for parameter definition. Fixed indentation issues. Changed SASS variables convention. variable should be separated by hyphen

--- a/squealy/squealy-web/src/sass/_main.scss
+++ b/squealy/squealy-web/src/sass/_main.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'mixins';
+@import 'fonts';
 @import './../Components/sass/apiList';
 @import './../Components/sass/apiParams';
 @import './../Components/sass/mainComponent';
@@ -7,12 +8,14 @@
 @import './../Components/sass/sidebar.scss';
 @import './../Components/sass/transformations.scss';
 @import './../Components/sass/columnDefinition.scss';
-@import './../Components/sass/temp/sideMenu.scss';
-@import './../Components/sass/temp/apiDesignView.scss';
 @import './../Components/dashboard-view/sass/dashboard.scss';
+@import './../Components/sass/temp/sideMenu.scss';
+@import './../Components/sass/temp/modal';
+@import './../Components/sass/temp/apiDesignView.scss';
 
 html, body, #root {
   height: 100%;
+  font-family: Roboto;
 }
 
 body {
