--- a/squealy/squealy-web/src/sass/_variables.scss
+++ b/squealy/squealy-web/src/sass/_variables.scss
@@ -1,12 +1,12 @@
-$side_bar_width: 21%;
-$white_color : #fff;
-$black_color : #000;
-$border_color: #ddd;
-$light_gray_color : #e6e6e6;
-$blue_color: #458fff;
-$orange_color: #f39448;
+$side-bar-width: 21%;
+$white-color: #fff;
+$black-color: #000;
+$border-color: #ddd;
+$light-gray-color: #e6e6e6;
+$blue-color: #458fff;
+$orange-color: #f39448;
 $primary: #45a5ff;
-$dark_gray_color: #777;
-$side_menu_heading_font_size: 18px;
-$text_color: #666;
+$dark-gray-color: #777;
+$side-menu-heading-font-size: 18px;
+$text-color: #666;
 
