Added logic to Generate test parameters if added in query. Added style

--- a/squealy/squealy-web/src/sass/_variables.scss
+++ b/squealy/squealy-web/src/sass/_variables.scss
@@ -9,4 +9,5 @@ $primary: #45a5ff;
 $dark-gray-color: #777;
 $side-menu-heading-font-size: 18px;
 $text-color: #666;
+$squealy-theme-blue: #0c8adc;
 
