--- a/squealy/squealy-web/src/sass/_main.scss
+++ b/squealy/squealy-web/src/sass/_main.scss
@@ -13,9 +13,15 @@
 @import './../Components/sass/temp/modal';
 @import './../Components/sass/temp/apiDesignView.scss';
 @import './../Components/sass/temp/navBar.scss';
+@import './../Components/sass/temp/googleTable.scss';
 
-html, body, #root {
-  height: 100%;
+html {
+  min-height: 100%;
+  font-family: Roboto;
+}
+
+body, #root {
+  min-height: 100vh;
   font-family: Roboto;
 }
 
@@ -26,7 +32,6 @@ html, body, #root {
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
   background: white;
 }
 
@@ -37,7 +42,7 @@ body {
 }
 
 .parent-div {
-  height: inherit;
+  height: 100%;
 }
 
 .clickable-element {
