--- a/squealy/squealy-web/src/sass/_main.scss
+++ b/squealy/squealy-web/src/sass/_main.scss
@@ -13,6 +13,7 @@
 @import './../Components/sass/temp/modal';
 @import './../Components/sass/temp/apiDesignView.scss';
 @import './../Components/sass/temp/navBar.scss';
+@import './../Components/sass/temp/responseSection.scss';
 
 html, body, #root {
   height: 100%;
@@ -31,7 +32,7 @@ body {
 }
 
 .active {
-  background-color: $light_gray_color !important;
+  background-color: $white-color !important;
   border-color: $border-color !important;
   color: $black_color !important;
 }
@@ -49,7 +50,7 @@ select {
   padding: 5px;
   border: 1px solid $border-color;
   background: white;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 input[type='text'] {
