--- a/squealy/squealy-web/src/sass/_variables.scss
+++ b/squealy/squealy-web/src/sass/_variables.scss
@@ -13,4 +13,5 @@ $squealy-theme-blue: #0c8adc;
 $squealy-theme-blue-active: #096eb0;
 $squealy-success: #1c9a71;
 $squealy-success-active: #136b4f;
+$highlighted-left-menu: #fdfdfd;
 
