HIR-427 Changed login header text

--- a/example/templates/registration/login.html
+++ b/example/templates/registration/login.html
@@ -24,7 +24,7 @@
 <div class="login-form-wrapper">
   <form class="form-signin" method="post" action="{% url 'login' %}">
       {% csrf_token %}
-      <h2 class="form-signin-heading">Sign in to SQueaLy</h2>
+      <h2 class="form-signin-heading">Login to SQueaLy</h2>
       
       <label for="id_username" class="sr-only">Username:</label>
       <input
