--- a/example/templates/base.html
+++ b/example/templates/base.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
 
     <title>SQueaLy</title>
+      <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
       <link rel="stylesheet" href="{% static "css/base.css" %}">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
       {% block css %}
       {% endblock %}
   </head>
@@ -16,7 +16,7 @@
       <img src="{% static "images/logo.png" %}" />
     </header>
     {% block content %}{% endblock %}
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="{% static "js/jquery.min.js" %}"></script>
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
   </body>
 </html>
