--- a/squealy/squealy-web/src/Components/sass/_responseSection.scss
+++ b/squealy/squealy-web/src/Components/sass/_responseSection.scss
@@ -1,3 +1,29 @@
+.chart-type-select {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  >img {
+    height: 26px;
+    margin-left: 15px;
+  }
+}
+
+.chart-config-modal {
+  width: 70%;
+}
+
+.error-box {
+  min-height: 85px;
+  background: $warning-bg-color;
+  color: $red-color;
+  font-size: 17px;
+  font-family: Roboto Bold;
+  text-align: center;
+  padding: 10px;
+  line-height: 2;
+}
+
 
 .response-formatwrapper{
   background-color: #f6f6f6;
