--- a/squealy/squealy-web/src/sass/_main.scss
+++ b/squealy/squealy-web/src/sass/_main.scss
@@ -2,16 +2,12 @@
 @import 'mixins';
 @import 'fonts';
 @import 'base';
-@import './../Components/sass/apiList';
-@import './../Components/sass/apiParams';
-@import './../Components/sass/mainComponent';
+@import './../Components/sass/paramDefModal';
 @import './../Components/sass/responseSection';
-@import './../Components/sass/sidebar.scss';
-@import './../Components/sass/transformations.scss';
-@import './../Components/sass/columnDefinition.scss';
-@import './../Components/sass/sideMenu.scss';
+@import './../Components/sass/transformations';
+@import './../Components/sass/sideMenu';
 @import './../Components/sass/modal';
-@import './../Components/sass/apiDesignView.scss';
-@import './../Components/sass/navBar.scss';
-@import './../Components/sass/responseSection.scss';
-@import './../Components/sass/googleTable.scss';
+@import './../Components/sass/apiDesignView';
+@import './../Components/sass/navBar';
+@import './../Components/sass/responseSection';
+@import './../Components/sass/googleTable';
