--- a/squealy/squealy-web/src/Components/sass/_modal.scss
+++ b/squealy/squealy-web/src/Components/sass/_modal.scss
@@ -60,7 +60,9 @@
   }
   .info-icon {
     font-size: 15px;
-    margin-left: 15px;
+    position: absolute;
+    top: 15px;
+    margin-left: 4px;
   }
 }
 
