--- a/squealy/squealy-web/src/Components/sass/_apiDesignView.scss
+++ b/squealy/squealy-web/src/Components/sass/_apiDesignView.scss
@@ -18,6 +18,10 @@
       padding-right: 5px;
     }
   }
+
+  .view-btn {
+    float: right;
+  }
   .transformation-container {
     display: inline-block;
     background: red;
@@ -69,4 +73,9 @@ tr.editable-table-row {
   &:hover, &:active, &:focus {
     color: $note-text-color-active;
   }
+}
+
+.view-filter {
+  display: flex;
+  padding: 15px 0;
 }
