--- a/squealy/squealy-web/src/sass/_variables.scss
+++ b/squealy/squealy-web/src/sass/_variables.scss
@@ -13,7 +13,7 @@ $squealy-theme-blue: #0c8adc;
 $squealy-theme-blue-active: #096eb0;
 $squealy-success: #1c9a71;
 $squealy-success-active: #136b4f;
-$highlighted-left-menu: #fdfdfd;
+$highlighted-left-menu: #dcdcdc;
 $note-text-color: #cf4647;
 $note-text-color-active: #9f292a;
 $warning-bg-color: #ffcccc;
